<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/task_name_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_tname"
            android:inputType="textCapSentences"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/task_description_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_name_layout">

        <EditText
            android:id="@+id/task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_tdesc"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/task_instruction_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_description_layout">

        <EditText
            android:id="@+id/task_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Task instruction" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/task_due_date_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_instruction_layout">

        <EditText
            android:id="@+id/task_due_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:focusable="false"
            android:hint="@string/hint_date"/>
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/status_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_due_date_layout">

        <RadioButton
            android:id="@+id/radio_incomplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_I"/>

        <RadioButton
            android:id="@+id/radio_in_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_EC"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/res_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/status_radio_group">

        <RadioButton
            android:id="@+id/radio_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Money"/>

        <RadioButton
            android:id="@+id/radio_clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cleaning Kit"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/res_radio_group">

        <Button
            android:id="@+id/btn_add_resources"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Select ressource"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_assign_user" />

        <Button
            android:id="@+id/btn_assign_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Select user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status_radio_group" />

        <Button
            android:id="@+id/btn_saved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Save Task" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>